@@ -32,7 +32,7 @@ import games.strategy.util.Version;
  * Title: TripleA
  * </p>
  * <p>
- * Description: Responsible for loading saved games, new games from xml, and saving games
+ * Description: Responsible for loading saved games, new games from xml, and saving games.
  * </p>
  */
 public class GameDataManager {
@@ -57,22 +57,23 @@ public class GameDataManager {
   }
 
   public GameData loadGame(final InputStream inputStream, final String savegamePath) throws IOException {
-    ObjectInputStream input = new ObjectInputStream(new GZIPInputStream(inputStream));
+    final ObjectInputStream input = new ObjectInputStream(new GZIPInputStream(inputStream));
     try {
       final Version readVersion = (Version) input.readObject();
       final boolean headless = HeadlessGameServer.headless();
-      if (!readVersion.equals(ClientContext.engineVersion().getVersion(), true)) {
+      if (!readVersion.equals(ClientContext.engineVersion(), true)) {
         // a hack for now, but a headless server should not try to open any savegame that is not its version
         if (headless) {
-          final String message = "Incompatible game save, we are: " + ClientContext.engineVersion().getVersion()
+          final String message = "Incompatible game save, we are: " + ClientContext.engineVersion()
               + "  Trying to load game created with: " + readVersion;
           HeadlessGameServer.sendChat(message);
           System.out.println(message);
           return null;
         }
         final String error = "<html>Incompatible engine versions, and no old engine found. We are: "
-            + ClientContext.engineVersion().getVersion() + " . Trying to load game created with: " + readVersion
-            + "<br>To download the latest version of TripleA, Please visit " + UrlConstants.LATEST_GAME_DOWNLOAD_WEBSITE + "</html>";
+            + ClientContext.engineVersion() + " . Trying to load game created with: " + readVersion
+            + "<br>To download the latest version of TripleA, Please visit "
+            + UrlConstants.LATEST_GAME_DOWNLOAD_WEBSITE + "</html>";
         if (savegamePath == null) {
           throw new IOException(error);
         }
@@ -82,12 +83,16 @@ public class GameDataManager {
         try {
           final String newClassPath = GameRunner.findOldJar(readVersion, true);
           // ask user if we really want to do this?
-          final String messageString = "<html>This TripleA engine is version " + ClientContext.engineVersion().getVersion()
+          final String messageString = "<html>This TripleA engine is version " + ClientContext.engineVersion()
               + " and you are trying to open a savegame made with version " + readVersion.toString()
-              + "<br>However, this TripleA cannot open any savegame made by any engine other than engines with the same first three version numbers as it (x_x_x_x)."
-              + "<br><br>TripleA now comes with older engines included with it, and has found the engine to run this savegame. This is a new feature and is in 'beta' stage."
-              + "<br>It will attempt to run a new instance of TripleA using the older engine jar file, and this instance will only be able to play this savegame."
-              + "<br><b>You may choose to either Close or Keep the current instance of TripleA!</b> (If hosting, you must close it). Please report any bugs or issues."
+              + "<br>However, this TripleA cannot open any savegame made by any engine other than engines with the "
+              + "same first three version numbers as it (x_x_x_x)."
+              + "<br><br>TripleA now comes with older engines included with it, and has found the engine to run this "
+              + "savegame. This is a new feature and is in 'beta' stage."
+              + "<br>It will attempt to run a new instance of TripleA using the older engine jar file, and this "
+              + "instance will only be able to play this savegame."
+              + "<br><b>You may choose to either Close or Keep the current instance of TripleA!</b> (If hosting, you "
+              + "must close it). Please report any bugs or issues."
               + "<br><br>Do you wish to continue?</html>";
           final String yesClose = "Yes & Close Current";
           final String yesOpen = "Yes & Do Not Close";
@@ -102,7 +107,7 @@ public class GameDataManager {
             return null;
           }
           final boolean closeCurrentInstance = buttonPressed.equals(yesClose);
-          GameRunner.startGame(savegamePath, newClassPath, null);
+          GameRunner.startGame(savegamePath, newClassPath);
           if (closeCurrentInstance) {
             ThreadUtil.sleep(1000);
             System.exit(0);
@@ -110,24 +115,29 @@ public class GameDataManager {
         } catch (final IOException e) {
           if (ClientFileSystemHelper.areWeOldExtraJar()) {
             throw new IOException("<html>Please run the default TripleA and try to open this game again. "
-                + "<br>This TripleA engine is old and kept only for backwards compatibility and can only open savegames created by engines with these first 3 version digits: "
-                + ClientContext.engineVersion().getVersion().toStringFull("_", true) + "</html>");
+                + "<br>This TripleA engine is old and kept only for backwards compatibility and can only open "
+                + "savegames created by engines with these first 3 version digits: "
+                + ClientContext.engineVersion().toStringFull("_", true) + "</html>");
           } else {
             throw new IOException(error);
           }
         }
         return null;
-      } else if (!headless && readVersion.isGreaterThan(ClientContext.engineVersion().getVersion(), false)) {
+      } else if (!headless && readVersion.isGreaterThan(ClientContext.engineVersion(), false)) {
         // we can still load it because first 3 numbers of the version are the same, however this save was made by a
         // newer engine, so prompt
         // the user to upgrade
         final String messageString =
             "<html>Your TripleA engine is OUT OF DATE.  This save was made by a newer version of TripleA."
-                + "<br>However, because the first 3 version numbers are the same as your current version, we can still open the savegame."
-                + "<br><br>This TripleA engine is version " + ClientContext.engineVersion().getVersion().toStringFull("_")
+                + "<br>However, because the first 3 version numbers are the same as your current version, we can "
+                + "still open the savegame."
+                + "<br><br>This TripleA engine is version "
+                + ClientContext.engineVersion().toStringFull("_")
                 + " and you are trying to open a savegame made with version " + readVersion.toStringFull("_")
-                + "<br><br>To download the latest version of TripleA, Please visit " + UrlConstants.LATEST_GAME_DOWNLOAD_WEBSITE
-                + "<br><br>It is recommended that you upgrade to the latest version of TripleA before playing this savegame."
+                + "<br><br>To download the latest version of TripleA, Please visit "
+                + UrlConstants.LATEST_GAME_DOWNLOAD_WEBSITE
+                + "<br><br>It is recommended that you upgrade to the latest version of TripleA before playing this "
+                + "savegame."
                 + "<br><br>Do you wish to continue and open this save with your current 'old' version?</html>";
         final int answer =
             JOptionPane.showConfirmDialog(null, messageString, "Open Newer Save Game?", JOptionPane.YES_NO_OPTION);
@@ -153,9 +163,6 @@ public class GameDataManager {
    * FYI: Engine version numbers work like this with regards to savegames:
    * Any changes to the first 3 digits means that the savegame is not compatible between different engines.
    * While any change only to the 4th (last) digit means that the savegame must be compatible between different engines.
-   *
-   * @param originalEngineVersion
-   * @param data
    */
   private void updateDataToBeCompatibleWithNewEngine(final Version originalEngineVersion, final GameData data) {
     // whenever this gets out of date, just comment out (but keep as an example, by commenting out)
@@ -163,8 +170,9 @@ public class GameDataManager {
      * example1:
      * final Version v1610 = new Version(1, 6, 1, 0);
      * final Version v1620 = new Version(1, 6, 2, 0);
-     * if (originalEngineVersion.equals(v1610, false) && ClientContext.engineVersion().getVersion().isGreaterThan(v1610, false) &&
-     * ClientContext.engineVersion().getVersion().isLessThan(v1620, true))
+     * if (originalEngineVersion.equals(v1610, false)
+     * && ClientContext.engineVersion().getVersion().isGreaterThan(v1610, false)
+     * && ClientContext.engineVersion().getVersion().isLessThan(v1620, true))
      * {
      * // if original save was done under 1.6.1.0, and new engine is greater than 1.6.1.0 and less than 1.6.2.0
      * try
@@ -183,15 +191,15 @@ public class GameDataManager {
      */
   }
 
-  private void loadDelegates(final ObjectInputStream input, final GameData data)
+  private static void loadDelegates(final ObjectInputStream input, final GameData data)
       throws ClassNotFoundException, IOException {
     for (Object endMarker = input.readObject(); !endMarker.equals(DELEGATE_LIST_END); endMarker = input.readObject()) {
       final String name = (String) input.readObject();
       final String displayName = (String) input.readObject();
       final String className = (String) input.readObject();
-      IDelegate instance;
+      final IDelegate instance;
       try {
-        instance = (IDelegate) Class.forName(className).newInstance();
+        instance = (IDelegate) Class.forName(className).getDeclaredConstructor().newInstance();
         instance.initialize(name, displayName);
         data.getDelegateList().addDelegate(instance);
       } catch (final Exception e) {
@@ -209,12 +217,11 @@ public class GameDataManager {
     saveGame(sink, data, true);
   }
 
-  public void saveGame(final OutputStream sink, final GameData data, final boolean saveDelegateInfo)
-      throws IOException {
+  void saveGame(final OutputStream sink, final GameData data, final boolean saveDelegateInfo) throws IOException {
     // write internally first in case of error
     final ByteArrayOutputStream bytes = new ByteArrayOutputStream(25000);
     final ObjectOutputStream outStream = new ObjectOutputStream(bytes);
-    outStream.writeObject(games.strategy.engine.ClientContext.engineVersion().getVersion());
+    outStream.writeObject(games.strategy.engine.ClientContext.engineVersion());
     data.acquireReadLock();
     try {
       outStream.writeObject(data);
@@ -232,7 +239,7 @@ public class GameDataManager {
     }
   }
 
-  private void writeDelegates(final GameData data, final ObjectOutputStream out) throws IOException {
+  private static void writeDelegates(final GameData data, final ObjectOutputStream out) throws IOException {
     final Iterator<IDelegate> iter = data.getDelegateList().iterator();
     while (iter.hasNext()) {
       out.writeObject(DELEGATE_START);
