@@ -1,12 +1,13 @@
 package games.strategy.engine.framework.startup.ui;
 
-import java.awt.Color;
-import java.awt.Container;
+import java.awt.Dialog;
+import java.awt.Dimension;
 import java.awt.GridBagConstraints;
 import java.awt.GridBagLayout;
 import java.awt.Insets;
-import java.awt.event.ActionEvent;
-import java.awt.event.ActionListener;
+import java.awt.Window;
+import java.awt.event.HierarchyEvent;
+import java.awt.event.HierarchyListener;
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
 import java.io.File;
@@ -17,8 +18,6 @@ import java.io.ObjectInput;
 import java.io.ObjectInputStream;
 import java.io.ObjectOutputStream;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -26,11 +25,9 @@ import java.util.Observable;
 import java.util.Observer;
 
 import javax.swing.JButton;
-import javax.swing.JCheckBox;
-import javax.swing.JComboBox;
-import javax.swing.JLabel;
 import javax.swing.JOptionPane;
 import javax.swing.JPanel;
+import javax.swing.JScrollPane;
 import javax.swing.SwingUtilities;
 import javax.swing.border.EmptyBorder;
 import javax.swing.border.TitledBorder;
@@ -38,7 +35,6 @@ import javax.swing.border.TitledBorder;
 import games.strategy.debug.ClientLogger;
 import games.strategy.engine.ClientFileSystemHelper;
 import games.strategy.engine.data.GameData;
-import games.strategy.engine.data.PlayerID;
 import games.strategy.engine.framework.message.PlayerListing;
 import games.strategy.engine.framework.startup.launcher.ILauncher;
 import games.strategy.engine.framework.startup.launcher.LocalLauncher;
@@ -50,14 +46,11 @@ import games.strategy.engine.pbem.GmailEmailSender;
 import games.strategy.engine.pbem.HotmailEmailSender;
 import games.strategy.engine.pbem.IEmailSender;
 import games.strategy.engine.pbem.IForumPoster;
-import games.strategy.engine.pbem.IWebPoster;
 import games.strategy.engine.pbem.NullEmailSender;
 import games.strategy.engine.pbem.NullForumPoster;
-import games.strategy.engine.pbem.NullWebPoster;
 import games.strategy.engine.pbem.PBEMMessagePoster;
 import games.strategy.engine.pbem.TripleAForumPoster;
 import games.strategy.engine.pbem.TripleAWarClubForumPoster;
-import games.strategy.engine.pbem.TripleAWebPoster;
 import games.strategy.engine.random.IRemoteDiceServer;
 import games.strategy.engine.random.InternalDiceServer;
 import games.strategy.engine.random.PBEMDiceRoller;
@@ -72,40 +65,51 @@ import games.strategy.triplea.pbem.AxisAndAlliesForumPoster;
 public class PBEMSetupPanel extends SetupPanel implements Observer {
   private static final long serialVersionUID = 9006941131918034674L;
   private static final String DICE_ROLLER = "games.strategy.engine.random.IRemoteDiceServer";
-  private final GameSelectorModel m_gameSelectorModel;
-  private final SelectAndViewEditor m_diceServerEditor;
-  private final SelectAndViewEditor m_forumPosterEditor;
-  private final SelectAndViewEditor m_emailSenderEditor;
-  private final SelectAndViewEditor m_webPosterEditor;
-  private final List<PBEMLocalPlayerComboBoxSelector> m_playerTypes = new ArrayList<>();
-  private final JPanel m_localPlayerPanel = new JPanel();
-  private final JButton m_localPlayerSelection = new JButton("Select Local Players and AI's");
+  private final GameSelectorModel gameSelectorModel;
+  private final SelectAndViewEditor diceServerEditor;
+  private final SelectAndViewEditor forumPosterEditor;
+  private final SelectAndViewEditor emailSenderEditor;
+  private final List<PlayerSelectorRow> playerTypes = new ArrayList<>();
+  private final JPanel localPlayerPanel = new JPanel();
+  private final JButton localPlayerSelection = new JButton("Select Local Players and AI's");
 
   /**
-   * Creates a new instance
+   * Creates a new instance.
    *
    * @param model
    *        the GameSelectionModel, though which changes are obtained when new games are chosen, or save games loaded
    */
   public PBEMSetupPanel(final GameSelectorModel model) {
-    m_gameSelectorModel = model;
-    m_diceServerEditor = new SelectAndViewEditor("Dice Server", "");
-    m_forumPosterEditor = new SelectAndViewEditor("Post to Forum", "forumPosters.html");
-    m_emailSenderEditor = new SelectAndViewEditor("Provider", "emailSenders.html");
-    m_webPosterEditor = new SelectAndViewEditor("Send to Website", "websiteSenders.html");
+    gameSelectorModel = model;
+    diceServerEditor = new SelectAndViewEditor("Dice Server", "");
+    forumPosterEditor = new SelectAndViewEditor("Post to Forum", "forumPosters.html");
+    emailSenderEditor = new SelectAndViewEditor("Provider", "emailSenders.html");
     createComponents();
     layoutComponents();
     setupListeners();
-    if (m_gameSelectorModel.getGameData() != null) {
+    if (gameSelectorModel.getGameData() != null) {
       loadAll();
     }
     setWidgetActivation();
   }
 
-
   private void createComponents() {
-    m_localPlayerSelection.addActionListener(
-        e -> JOptionPane.showMessageDialog(PBEMSetupPanel.this, m_localPlayerPanel, "Select Local Players and AI's",
+    final JScrollPane scrollPane = new JScrollPane(localPlayerPanel);
+    localPlayerPanel.addHierarchyListener(new HierarchyListener() {
+      @Override
+      public void hierarchyChanged(HierarchyEvent e) {
+        final Window window = SwingUtilities.getWindowAncestor(localPlayerPanel);
+        if (window instanceof Dialog) {
+          final Dialog dialog = (Dialog) window;
+          if (!dialog.isResizable()) {
+            dialog.setResizable(true);
+            dialog.setMinimumSize(new Dimension(700, 700));
+          }
+        }
+      }
+    });
+    localPlayerSelection.addActionListener(
+        e -> JOptionPane.showMessageDialog(PBEMSetupPanel.this, scrollPane, "Select Local Players and AI's",
             JOptionPane.PLAIN_MESSAGE));
   }
 
@@ -115,24 +119,24 @@ public class PBEMSetupPanel extends SetupPanel implements Observer {
     // Empty border works as margin
     setBorder(new EmptyBorder(10, 10, 10, 10));
     int row = 0;
-    add(m_diceServerEditor, new GridBagConstraints(0, row++, 1, 1, 1.0d, 0d, GridBagConstraints.NORTHWEST,
+    add(diceServerEditor, new GridBagConstraints(0, row++, 1, 1, 1.0d, 0d, GridBagConstraints.NORTHWEST,
         GridBagConstraints.HORIZONTAL, new Insets(10, 0, 20, 0), 0, 0));
     // the play by Forum settings
-    m_forumPosterEditor.setBorder(new TitledBorder("Play By Forum"));
-    add(m_forumPosterEditor, new GridBagConstraints(0, row++, 1, 1, 1.0d, 0d, GridBagConstraints.NORTHWEST,
+    forumPosterEditor.setBorder(new TitledBorder("Play By Forum"));
+    add(forumPosterEditor, new GridBagConstraints(0, row++, 1, 1, 1.0d, 0d, GridBagConstraints.NORTHWEST,
         GridBagConstraints.HORIZONTAL, new Insets(0, 0, 20, 0), 0, 0));
     final JPanel emailPanel = new JPanel(new GridBagLayout());
     emailPanel.setBorder(new TitledBorder("Play By Email"));
     add(emailPanel, new GridBagConstraints(0, row++, 1, 1, 1.0d, 0d, GridBagConstraints.NORTHWEST,
         GridBagConstraints.HORIZONTAL, new Insets(0, 0, 20, 0), 0, 0));
     int panelRow = 0;
-    emailPanel.add(m_emailSenderEditor, new GridBagConstraints(0, panelRow++, 1, 1, 1.0d, 0d,
+    emailPanel.add(emailSenderEditor, new GridBagConstraints(0, panelRow++, 1, 1, 1.0d, 0d,
         GridBagConstraints.NORTHWEST, GridBagConstraints.HORIZONTAL, new Insets(0, 0, 2, 0), 0, 0));
 
     // add selection of local players
-    add(m_localPlayerSelection, new GridBagConstraints(0, row++, 1, 1, 1.0d, 0d, GridBagConstraints.NORTHEAST,
+    add(localPlayerSelection, new GridBagConstraints(0, row++, 1, 1, 1.0d, 0d, GridBagConstraints.NORTHEAST,
         GridBagConstraints.NONE, new Insets(10, 0, 10, 0), 0, 0));
-    layoutPlayerPanel(this);
+    layoutPlayerComponents(localPlayerPanel, playerTypes, gameSelectorModel.getGameData());
     setWidgetActivation();
   }
 
@@ -148,23 +152,21 @@ public class PBEMSetupPanel extends SetupPanel implements Observer {
   private void setupListeners() {
     // register, so we get notified when the game model (GameData) changes (e.g if the user load a save game or selects
     // another game)
-    m_gameSelectorModel.addObserver(this);
+    gameSelectorModel.addObserver(this);
     // subscribe to editor changes, so we cannotify the MainPanel
-    m_diceServerEditor.addPropertyChangeListener(new NotifyingPropertyChangeListener());
-    m_forumPosterEditor.addPropertyChangeListener(new NotifyingPropertyChangeListener());
-    m_emailSenderEditor.addPropertyChangeListener(new NotifyingPropertyChangeListener());
-    m_webPosterEditor.addPropertyChangeListener(new NotifyingPropertyChangeListener());
+    diceServerEditor.addPropertyChangeListener(new NotifyingPropertyChangeListener());
+    forumPosterEditor.addPropertyChangeListener(new NotifyingPropertyChangeListener());
+    emailSenderEditor.addPropertyChangeListener(new NotifyingPropertyChangeListener());
   }
 
   private void loadAll() {
-    loadDiceServer(m_gameSelectorModel.getGameData());
-    loadForumPosters(m_gameSelectorModel.getGameData());
-    loadEmailSender(m_gameSelectorModel.getGameData());
-    loadWebPosters(m_gameSelectorModel.getGameData());
+    loadDiceServer(gameSelectorModel.getGameData());
+    loadForumPosters(gameSelectorModel.getGameData());
+    loadEmailSender(gameSelectorModel.getGameData());
   }
 
   /**
-   * Load the dice rollers from cache, if the game was a save game, the dice roller store is selected
+   * Load the dice rollers from cache, if the game was a save game, the dice roller store is selected.
    *
    * @param data
    *        the game data
@@ -181,12 +183,12 @@ public class PBEMSetupPanel extends SetupPanel implements Observer {
         diceRoller.setGameId(cached.getGameId());
       }
     }
-    m_diceServerEditor.setBeans(diceRollers);
-    if (m_gameSelectorModel.isSavedGame()) {
+    diceServerEditor.setBeans(diceRollers);
+    if (gameSelectorModel.isSavedGame()) {
       // get the dice roller from the save game, if any
       final IRemoteDiceServer roller = (IRemoteDiceServer) data.getProperties().get(DICE_ROLLER);
       if (roller != null) {
-        m_diceServerEditor.setSelectedBean(roller);
+        diceServerEditor.setSelectedBean(roller);
       }
     }
   }
@@ -201,11 +203,11 @@ public class PBEMSetupPanel extends SetupPanel implements Observer {
   private void loadForumPosters(final GameData data) {
     // get the forum posters,
     final List<IForumPoster> forumPosters = new ArrayList<>();
-    forumPosters.add((IForumPoster) findCachedOrCreateNew(NullForumPoster.class));
-    forumPosters.add((IForumPoster) findCachedOrCreateNew(AxisAndAlliesForumPoster.class));
-    forumPosters.add((IForumPoster) findCachedOrCreateNew(TripleAWarClubForumPoster.class));
-    forumPosters.add((IForumPoster) findCachedOrCreateNew(TripleAForumPoster.class));
-    m_forumPosterEditor.setBeans(forumPosters);
+    forumPosters.add(findCachedOrCreateNew(NullForumPoster.class));
+    forumPosters.add(findCachedOrCreateNew(AxisAndAlliesForumPoster.class));
+    forumPosters.add(findCachedOrCreateNew(TripleAWarClubForumPoster.class));
+    forumPosters.add(findCachedOrCreateNew(TripleAForumPoster.class));
+    forumPosterEditor.setBeans(forumPosters);
     // now get the poster stored in the save game
     final IForumPoster forumPoster = (IForumPoster) data.getProperties().get(PBEMMessagePoster.FORUM_POSTER_PROP_NAME);
     if (forumPoster != null) {
@@ -215,24 +217,9 @@ public class PBEMSetupPanel extends SetupPanel implements Observer {
       if (cached != null) {
         forumPoster.setUsername(cached.getUsername());
         forumPoster.setPassword(cached.getPassword());
+        forumPoster.setCredentialsSaved(cached.areCredentialsSaved());
       }
-      m_forumPosterEditor.setSelectedBean(forumPoster);
-    }
-  }
-
-  private void loadWebPosters(final GameData data) {
-    final List<IWebPoster> webPosters = new ArrayList<>();
-    webPosters.add((IWebPoster) findCachedOrCreateNew(NullWebPoster.class));
-    final TripleAWebPoster poster = (TripleAWebPoster) findCachedOrCreateNew(TripleAWebPoster.class);
-    poster.setParties(data.getPlayerList().getNames());
-    webPosters.add(poster);
-    m_webPosterEditor.setBeans(webPosters);
-    // now get the poster stored in the save game
-    final IWebPoster webPoster = (IWebPoster) data.getProperties().get(PBEMMessagePoster.WEB_POSTER_PROP_NAME);
-    if (webPoster != null) {
-      poster.addToAllHosts(webPoster.getHost());
-      webPoster.setAllHosts(poster.getAllHosts());
-      m_webPosterEditor.setSelectedBean(webPoster);
+      forumPosterEditor.setSelectedBean(forumPoster);
     }
   }
 
@@ -246,11 +233,11 @@ public class PBEMSetupPanel extends SetupPanel implements Observer {
   private void loadEmailSender(final GameData data) {
     // The list of email, either loaded from cache or created
     final List<IEmailSender> emailSenders = new ArrayList<>();
-    emailSenders.add((IEmailSender) findCachedOrCreateNew(NullEmailSender.class));
-    emailSenders.add((IEmailSender) findCachedOrCreateNew(GmailEmailSender.class));
-    emailSenders.add((IEmailSender) findCachedOrCreateNew(HotmailEmailSender.class));
-    emailSenders.add((IEmailSender) findCachedOrCreateNew(GenericEmailSender.class));
-    m_emailSenderEditor.setBeans(emailSenders);
+    emailSenders.add(findCachedOrCreateNew(NullEmailSender.class));
+    emailSenders.add(findCachedOrCreateNew(GmailEmailSender.class));
+    emailSenders.add(findCachedOrCreateNew(HotmailEmailSender.class));
+    emailSenders.add(findCachedOrCreateNew(GenericEmailSender.class));
+    emailSenderEditor.setBeans(emailSenders);
     // now get the sender from the save game, update it with credentials from the cache, and set it
     final IEmailSender sender = (IEmailSender) data.getProperties().get(PBEMMessagePoster.EMAIL_SENDER_PROP_NAME);
     if (sender != null) {
@@ -259,8 +246,9 @@ public class PBEMSetupPanel extends SetupPanel implements Observer {
       if (cached != null) {
         sender.setUserName(cached.getUserName());
         sender.setPassword(cached.getPassword());
+        sender.setCredentialsSaved(cached.areCredentialsSaved());
       }
-      m_emailSenderEditor.setSelectedBean(sender);
+      emailSenderEditor.setSelectedBean(sender);
     }
   }
 
@@ -271,11 +259,11 @@ public class PBEMSetupPanel extends SetupPanel implements Observer {
    *        the type of class
    * @return a IBean either loaded from the cache or created
    */
-  private static IBean findCachedOrCreateNew(final Class<? extends IBean> theClassType) {
-    IBean cached = LocalBeanCache.INSTANCE.getSerializable(theClassType.getCanonicalName());
+  private static <T extends IBean> T findCachedOrCreateNew(final Class<T> theClassType) {
+    T cached = theClassType.cast(LocalBeanCache.INSTANCE.getSerializable(theClassType.getCanonicalName()));
     if (cached == null) {
       try {
-        cached = theClassType.newInstance();
+        cached = theClassType.getDeclaredConstructor().newInstance();
       } catch (final Exception e) {
         throw new RuntimeException(
             "Bean of type " + theClassType + " doesn't have public default constructor, error: " + e.getMessage());
@@ -286,36 +274,34 @@ public class PBEMSetupPanel extends SetupPanel implements Observer {
 
   @Override
   public void shutDown() {
-    m_gameSelectorModel.deleteObserver(this);
+    gameSelectorModel.deleteObserver(this);
   }
 
   /**
-   * Called when the current game changes
+   * Called when the current game changes.
    */
   @Override
   public void cancel() {
-    m_gameSelectorModel.deleteObserver(this);
+    gameSelectorModel.deleteObserver(this);
   }
 
   /**
-   * Called when the observers detect change, to see if the game is in a startable state
+   * Called when the observers detect change, to see if the game is in a startable state.
    */
   @Override
   public boolean canGameStart() {
-    if (m_gameSelectorModel.getGameData() == null) {
+    if (gameSelectorModel.getGameData() == null) {
       return false;
     }
-    final boolean diceServerValid = m_diceServerEditor.isBeanValid();
-    final boolean summaryValid = m_forumPosterEditor.isBeanValid();
-    final boolean webSiteValid = m_webPosterEditor.isBeanValid();
-    final boolean emailValid = m_emailSenderEditor.isBeanValid();
-    final boolean pbemReady =
-        diceServerValid && summaryValid && emailValid && webSiteValid && m_gameSelectorModel.getGameData() != null;
+    final boolean diceServerValid = diceServerEditor.isBeanValid();
+    final boolean summaryValid = forumPosterEditor.isBeanValid();
+    final boolean emailValid = emailSenderEditor.isBeanValid();
+    final boolean pbemReady = diceServerValid && summaryValid && emailValid && gameSelectorModel.getGameData() != null;
     if (!pbemReady) {
       return false;
     }
     // make sure at least 1 player is enabled
-    for (final PBEMLocalPlayerComboBoxSelector player : m_playerTypes) {
+    for (final PlayerSelectorRow player : playerTypes) {
       if (player.isPlayerEnabled()) {
         return true;
       }
@@ -326,10 +312,10 @@ public class PBEMSetupPanel extends SetupPanel implements Observer {
   @Override
   public void postStartGame() {
     // // store the dice server
-    final GameData data = m_gameSelectorModel.getGameData();
-    data.getProperties().set(DICE_ROLLER, m_diceServerEditor.getBean());
+    final GameData data = gameSelectorModel.getGameData();
+    data.getProperties().set(DICE_ROLLER, diceServerEditor.getBean());
     // store the Turn Summary Poster
-    final IForumPoster poster = (IForumPoster) m_forumPosterEditor.getBean();
+    final IForumPoster poster = (IForumPoster) forumPosterEditor.getBean();
     if (poster != null) {
       IForumPoster summaryPoster = poster;
       // clone the poster, the remove sensitive info, and put the clone into the game data
@@ -339,7 +325,7 @@ public class PBEMSetupPanel extends SetupPanel implements Observer {
       data.getProperties().set(PBEMMessagePoster.FORUM_POSTER_PROP_NAME, summaryPoster);
     }
     // store the email poster
-    IEmailSender sender = (IEmailSender) m_emailSenderEditor.getBean();
+    IEmailSender sender = (IEmailSender) emailSenderEditor.getBean();
     if (sender != null) {
       // create a clone, delete the sensitive information in the clone, and use it in the game
       // the locally cached version still has the password so the user doesn't have to enter it every time
@@ -347,15 +333,8 @@ public class PBEMSetupPanel extends SetupPanel implements Observer {
       sender.clearSensitiveInfo();
       data.getProperties().set(PBEMMessagePoster.EMAIL_SENDER_PROP_NAME, sender);
     }
-    // store the web site poster
-    IWebPoster webPoster = (IWebPoster) m_webPosterEditor.getBean();
-    if (webPoster != null) {
-      webPoster = webPoster.doClone();
-      webPoster.clearSensitiveInfo();
-      data.getProperties().set(PBEMMessagePoster.WEB_POSTER_PROP_NAME, webPoster);
-    }
     // store whether we are a pbem game or not, whether we are capable of posting a game save
-    if (poster != null || sender != null || webPoster != null) {
+    if (poster != null || sender != null) {
       data.getProperties().set(PBEMMessagePoster.PBEM_GAME_PROP_NAME, true);
     }
   }
@@ -383,32 +362,28 @@ public class PBEMSetupPanel extends SetupPanel implements Observer {
   }
 
   /**
-   * Called when the user hits play
+   * Called when the user hits play.
    */
   @Override
   public ILauncher getLauncher() {
     // update local cache and write to disk before game starts
-    final IForumPoster poster = (IForumPoster) m_forumPosterEditor.getBean();
+    final IForumPoster poster = (IForumPoster) forumPosterEditor.getBean();
     if (poster != null) {
       LocalBeanCache.INSTANCE.storeSerializable(poster.getClass().getCanonicalName(), poster);
     }
-    final IEmailSender sender = (IEmailSender) m_emailSenderEditor.getBean();
+    final IEmailSender sender = (IEmailSender) emailSenderEditor.getBean();
     if (sender != null) {
       LocalBeanCache.INSTANCE.storeSerializable(sender.getClass().getCanonicalName(), sender);
     }
-    final IWebPoster web = (IWebPoster) m_webPosterEditor.getBean();
-    if (web != null) {
-      LocalBeanCache.INSTANCE.storeSerializable(web.getClass().getCanonicalName(), web);
-    }
-    final IRemoteDiceServer server = (IRemoteDiceServer) m_diceServerEditor.getBean();
+    final IRemoteDiceServer server = (IRemoteDiceServer) diceServerEditor.getBean();
     LocalBeanCache.INSTANCE.storeSerializable(server.getDisplayName(), server);
     LocalBeanCache.INSTANCE.writeToDisk();
     // create local launcher
-    final String gameUUID = (String) m_gameSelectorModel.getGameData().getProperties().get(GameData.GAME_UUID);
-    final PBEMDiceRoller randomSource = new PBEMDiceRoller((IRemoteDiceServer) m_diceServerEditor.getBean(), gameUUID);
+    final String gameUuid = (String) gameSelectorModel.getGameData().getProperties().get(GameData.GAME_UUID);
+    final PBEMDiceRoller randomSource = new PBEMDiceRoller((IRemoteDiceServer) diceServerEditor.getBean(), gameUuid);
     final Map<String, String> playerTypes = new HashMap<>();
     final Map<String, Boolean> playersEnabled = new HashMap<>();
-    for (final PBEMLocalPlayerComboBoxSelector player : m_playerTypes) {
+    for (final PlayerSelectorRow player : this.playerTypes) {
       playerTypes.put(player.getPlayerName(), player.getPlayerType());
       playersEnabled.put(player.getPlayerName(), player.isPlayerEnabled());
     }
@@ -416,13 +391,13 @@ public class PBEMSetupPanel extends SetupPanel implements Observer {
     // disable-able players, or the alliances
     // list, for a local game
     final PlayerListing pl =
-        new PlayerListing(null, playersEnabled, playerTypes, m_gameSelectorModel.getGameData().getGameVersion(),
-            m_gameSelectorModel.getGameName(), m_gameSelectorModel.getGameRound(), null, null);
-    return new LocalLauncher(m_gameSelectorModel, randomSource, pl);
+        new PlayerListing(null, playersEnabled, playerTypes, gameSelectorModel.getGameData().getGameVersion(),
+            gameSelectorModel.getGameName(), gameSelectorModel.getGameRound(), null, null);
+    return new LocalLauncher(gameSelectorModel, randomSource, pl);
   }
 
   /**
-   * A property change listener that notify our observers
+   * A property change listener that notify our observers.
    */
   private class NotifyingPropertyChangeListener implements PropertyChangeListener {
     @Override
@@ -431,250 +406,90 @@ public class PBEMSetupPanel extends SetupPanel implements Observer {
     }
   }
 
-  public String getPlayerType(final String playerName) {
-    for (final PBEMLocalPlayerComboBoxSelector item : m_playerTypes) {
-      if (item.getPlayerName().equals(playerName)) {
-        return item.getPlayerType();
-      }
-    }
-    throw new IllegalStateException("No player found:" + playerName);
-  }
-
-  private void layoutPlayerPanel(final SetupPanel parent) {
-    final GameData data = m_gameSelectorModel.getGameData();
-    m_localPlayerPanel.removeAll();
-    m_playerTypes.clear();
-    m_localPlayerPanel.setLayout(new GridBagLayout());
-    if (data == null) {
-      m_localPlayerPanel.add(new JLabel("No game selected!"));
-      return;
-    }
-    final Collection<String> disableable = data.getPlayerList().getPlayersThatMayBeDisabled();
-    final HashMap<String, Boolean> playersEnablementListing = data.getPlayerList().getPlayersEnabledListing();
-    final Map<String, String> reloadSelections = PlayerID.currentPlayers(data);
-    final String[] playerTypes = data.getGameLoader().getServerPlayerTypes();
-    final String[] playerNames = data.getPlayerList().getNames();
-    // if the xml was created correctly, this list will be in turn order. we want to keep it that way.
-    int gridx = 0;
-    int gridy = 0;
-    if (!disableable.isEmpty() || playersEnablementListing.containsValue(Boolean.FALSE)) {
-      final JLabel enableLabel = new JLabel("Use");
-      enableLabel.setForeground(Color.black);
-      m_localPlayerPanel.add(enableLabel, new GridBagConstraints(gridx++, gridy, 1, 1, 0, 0, GridBagConstraints.WEST,
-          GridBagConstraints.NONE, new Insets(0, 5, 5, 0), 0, 0));
-    }
-    final JLabel nameLabel = new JLabel("Name");
-    nameLabel.setForeground(Color.black);
-    m_localPlayerPanel.add(nameLabel, new GridBagConstraints(gridx++, gridy, 1, 1, 0, 0, GridBagConstraints.WEST,
-        GridBagConstraints.NONE, new Insets(0, 5, 5, 0), 0, 0));
-    final JLabel typeLabel = new JLabel("Type");
-    typeLabel.setForeground(Color.black);
-    m_localPlayerPanel.add(typeLabel, new GridBagConstraints(gridx++, gridy, 1, 1, 0, 0, GridBagConstraints.WEST,
-        GridBagConstraints.NONE, new Insets(0, 5, 5, 0), 0, 0));
-    final JLabel allianceLabel = new JLabel("Alliance");
-    allianceLabel.setForeground(Color.black);
-    m_localPlayerPanel.add(allianceLabel, new GridBagConstraints(gridx++, gridy, 1, 1, 0, 0, GridBagConstraints.WEST,
-        GridBagConstraints.NONE, new Insets(0, 7, 5, 5), 0, 0));
-    for (final String playerName : playerNames) {
-      final PBEMLocalPlayerComboBoxSelector selector =
-          new PBEMLocalPlayerComboBoxSelector(playerName, reloadSelections, disableable, playersEnablementListing,
-              data.getAllianceTracker().getAlliancesPlayerIsIn(data.getPlayerList().getPlayerID(playerName)),
-              playerTypes, parent);
-      m_playerTypes.add(selector);
-      selector.layout(++gridy, m_localPlayerPanel);
-    }
-    m_localPlayerPanel.validate();
-    m_localPlayerPanel.invalidate();
-  }
-}
-
-
-class PBEMLocalPlayerComboBoxSelector {
-  private final JCheckBox m_enabledCheckBox;
-  private final String m_playerName;
-  private final JComboBox<String> m_playerTypes;
-  private boolean m_enabled = true;
-  private final JLabel m_name;
-  private final JLabel m_alliances;
-  private final Collection<String> m_disableable;
-  private final String[] m_types;
-  private final SetupPanel m_parent;
-
-  PBEMLocalPlayerComboBoxSelector(final String playerName, final Map<String, String> reloadSelections,
-      final Collection<String> disableable, final HashMap<String, Boolean> playersEnablementListing,
-      final Collection<String> playerAlliances, final String[] types, final SetupPanel parent) {
-    m_playerName = playerName;
-    m_name = new JLabel(m_playerName + ":");
-    m_enabledCheckBox = new JCheckBox();
-    final ActionListener m_disablePlayerActionListener = new ActionListener() {
-      @Override
-      public void actionPerformed(final ActionEvent e) {
-        if (m_enabledCheckBox.isSelected()) {
-          m_enabled = true;
-          // the 1st in the list should be human
-          m_playerTypes.setSelectedItem(m_types[0]);
-        } else {
-          m_enabled = false;
-          // the 2nd in the list should be Weak AI
-          m_playerTypes.setSelectedItem(m_types[Math.max(0, Math.min(m_types.length - 1, 1))]);
-        }
-        setWidgetActivation();
-      }
-    };
-    m_enabledCheckBox.addActionListener(m_disablePlayerActionListener);
-    m_enabledCheckBox.setSelected(playersEnablementListing.get(playerName));
-    m_enabledCheckBox.setEnabled(disableable.contains(playerName));
-    m_disableable = disableable;
-    m_parent = parent;
-    m_types = types;
-    m_playerTypes = new JComboBox<>(types);
-    String previousSelection = reloadSelections.get(playerName);
-    if (previousSelection.equalsIgnoreCase("Client")) {
-      previousSelection = types[0];
-    }
-    if (!(previousSelection.equals("no_one")) && Arrays.asList(types).contains(previousSelection)) {
-      m_playerTypes.setSelectedItem(previousSelection);
-    } else if (m_playerName.startsWith("Neutral") || playerName.startsWith("AI")) {
-      // the 4th in the list should be Pro AI (Hard AI)
-      m_playerTypes.setSelectedItem(types[Math.max(0, Math.min(types.length - 1, 3))]);
-    }
-    // we do not set the default for the combobox because the default is the top item, which in this case is human
-    String m_playerAlliances;
-    if (playerAlliances.contains(playerName)) {
-      m_playerAlliances = "";
-    } else {
-      m_playerAlliances = playerAlliances.toString();
-    }
-    m_alliances = new JLabel(m_playerAlliances);
-    setWidgetActivation();
-  }
-
-  public void layout(final int row, final Container container) {
-    int gridx = 0;
-    if (!m_disableable.isEmpty()) {
-      container.add(m_enabledCheckBox, new GridBagConstraints(gridx++, row, 1, 1, 0, 0, GridBagConstraints.WEST,
-          GridBagConstraints.NONE, new Insets(0, 5, 5, 0), 0, 0));
-    }
-    container.add(m_name, new GridBagConstraints(gridx++, row, 1, 1, 0, 0, GridBagConstraints.WEST,
-        GridBagConstraints.NONE, new Insets(0, 5, 5, 0), 0, 0));
-    container.add(m_playerTypes, new GridBagConstraints(gridx++, row, 1, 1, 0, 0, GridBagConstraints.WEST,
-        GridBagConstraints.NONE, new Insets(0, 5, 5, 0), 0, 0));
-    container.add(m_alliances, new GridBagConstraints(gridx++, row, 1, 1, 0, 0, GridBagConstraints.WEST,
-        GridBagConstraints.NONE, new Insets(0, 7, 5, 5), 0, 0));
-  }
-
-  public String getPlayerName() {
-    return m_playerName;
-  }
-
-  public String getPlayerType() {
-    return (String) m_playerTypes.getSelectedItem();
-  }
-
-  public boolean isPlayerEnabled() {
-    return m_enabledCheckBox.isSelected();
-  }
-
-  private void setWidgetActivation() {
-    m_name.setEnabled(m_enabled);
-    m_alliances.setEnabled(m_enabled);
-    m_enabledCheckBox.setEnabled(m_disableable.contains(m_playerName));
-    m_parent.notifyObservers();
-  }
-
   /**
    * A cache for serialized beans that should be stored locally.
    * This is used to store settings which are not game related, and should therefore not go into the options cache
    * This is often used by editors to remember previous values
    */
+  private enum LocalBeanCache {
+    INSTANCE;
+    private final File file;
+    private final Object mutex = new Object();
 
-}
+    Map<String, IBean> map = new HashMap<>();
 
+    LocalBeanCache() {
+      file = new File(ClientFileSystemHelper.getUserRootFolder(), "local.cache");
+      map = loadMap();
+      // add a shutdown, just in case someone forgets to call writeToDisk
+      final Thread shutdown = new Thread(this::writeToDisk);
+      Runtime.getRuntime().addShutdownHook(shutdown);
+    }
 
-/** A bean cache used by PBEMSetupPanel */
-enum LocalBeanCache {
-  INSTANCE;
-  private final File m_file;
-  private final Object m_mutex = new Object();
-
-  Map<String, IBean> m_map = new HashMap<>();
-
-  private LocalBeanCache() {
-    m_file = new File(ClientFileSystemHelper.getUserRootFolder(), "local.cache");
-    m_map = loadMap();
-    // add a shutdown, just in case someone forgets to call writeToDisk
-    final Thread shutdown = new Thread(() -> writeToDisk());
-    Runtime.getRuntime().addShutdownHook(shutdown);
-  }
-
-  @SuppressWarnings("unchecked")
-  private Map<String, IBean> loadMap() {
-    if (m_file.exists()) {
-      try (FileInputStream fin = new FileInputStream(m_file);
-          ObjectInput oin = new ObjectInputStream(fin);) {
-        final Object o = oin.readObject();
-        if (o instanceof Map) {
-          final Map<?, ?> m = (Map<?, ?>) o;
-          for (final Object o1 : m.keySet()) {
-            if (!(o1 instanceof String)) {
-              throw new Exception("Map is corrupt");
+    @SuppressWarnings("unchecked")
+    private Map<String, IBean> loadMap() {
+      if (file.exists()) {
+        try (FileInputStream fin = new FileInputStream(file);
+            ObjectInput oin = new ObjectInputStream(fin)) {
+          final Object o = oin.readObject();
+          if (o instanceof Map) {
+            final Map<?, ?> m = (Map<?, ?>) o;
+            for (final Object o1 : m.keySet()) {
+              if (!(o1 instanceof String)) {
+                throw new Exception("Map is corrupt");
+              }
             }
+          } else {
+            throw new Exception("File is corrupt");
           }
-        } else {
-          throw new Exception("File is corrupt");
+          // we know that the map has proper type key/value
+          return (HashMap<String, IBean>) o;
+        } catch (final Exception e) {
+          // on error we delete the cache file, if we can
+          file.delete();
+          ClientLogger.logQuietly("serialized local bean cache invalid", e);
         }
-        // we know that the map has proper type key/value
-        return (HashMap<String, IBean>) o;
-      } catch (final Exception e) {
-        // on error we delete the cache file, if we can
-        m_file.delete();
-        System.err.println("Serialization cache invalid: " + e.getMessage());
-        ClientLogger.logQuietly(e);
+      }
+      return new HashMap<>();
+    }
+
+    /**
+     * adds a new Serializable to the cache
+     *
+     * @param key
+     *        the key the serializable should be stored under. Take care not to override a serializable stored by other
+     *        code
+     *        it is generally a good ide to use fully qualified class names, getClass().getCanonicalName() as key
+     * @param bean
+     *        the bean
+     */
+    void storeSerializable(final String key, final IBean bean) {
+      map.put(key, bean);
+    }
+
+    /**
+     * Call to have the cache written to disk.
+     */
+    void writeToDisk() {
+      synchronized (mutex) {
+        try (FileOutputStream fout = new FileOutputStream(file, false);
+            ObjectOutputStream out = new ObjectOutputStream(fout)) {
+          out.writeObject(map);
+        } catch (final IOException e) {
+          ClientLogger.logQuietly("failed to write local bean cache", e);
+        }
       }
     }
-    return new HashMap<>();
-  }
 
-  /**
-   * adds a new Serializable to the cache
-   *
-   * @param key
-   *        the key the serializable should be stored under. Take care not to override a serializable stored by other
-   *        code
-   *        it is generally a good ide to use fully qualified class names, getClass().getCanonicalName() as key
-   * @param bean
-   *        the bean
-   */
-  public void storeSerializable(final String key, final IBean bean) {
-    m_map.put(key, bean);
-  }
-
-  /**
-   * Call to have the cache written to disk
-   */
-  public void writeToDisk() {
-    synchronized (m_mutex) {
-      try (FileOutputStream fout = new FileOutputStream(m_file, false);
-          ObjectOutputStream out = new ObjectOutputStream(fout);) {
-
-        out.writeObject(m_map);
-      } catch (final IOException e) {
-        // ignore
-      }
+    /**
+     * Get a serializable from the cache.
+     *
+     * @param key
+     *        the key ot was stored under
+     * @return the serializable or null if one doesn't exists under the given key
+     */
+    IBean getSerializable(final String key) {
+      return map.get(key);
     }
   }
-
-  /**
-   * Get a serializable from the cache
-   *
-   * @param key
-   *        the key ot was stored under
-   * @return the serializable or null if one doesn't exists under the given key
-   */
-  public IBean getSerializable(final String key) {
-    return m_map.get(key);
-  }
-
-
 }
-
